# PickMySeats

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile  build_error.txt  check.txt  check_errs.txt  filtered_events.json  package-lock.json
backend/migrations/: 001_create_users.sql  002_create_venues.sql  003_create_seats.sql  004_create_events.sql  005_create_orders.sql  006_create_tickets.sql  007_add_location_to_events.sql  008_add_seat_layout_to_events.sql  009_create_event_seats.sql  010_alter_tickets_fk.sql  011_create_event_staff.sql  012_add_image_url_to_events.sql  013_add_image_urls_array.sql  014_add_seat_layout.sql  015_add_ticket_type.sql  016_add_bulk_seat_lock.sql  017_add_refund_policy_and_ticket_cancellation.sql  018_replace_event_staff_add_scanned_tickets.sql  019_fix_event_staff_schema.sql  020_add_event_timings_and_maps.sql  021_create_organizer_bank_details.sql  022_create_cancellation_tables.sql  023_add_cancellation_type_to_tickets.sql  024_create_ticket_holds.sql  025_add_ticket_transfer_fields.sql  026_create_pending_transfers.sql
backend/scripts/: force_migration.rs
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: analytics.rs  auth.rs  bank_details.rs  events.rs  mod.rs  payment.rs  seats.rs  staff.rs  tickets.rs  validation.rs  venues.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: event.rs  mod.rs  order.rs  seat.rs  staff.rs  ticket.rs  user.rs  venue.rs
backend/src/routes/: mod.rs
backend/src/utils/: email.rs  jwt.rs  mod.rs  qr.rs
(+59 files in other folders)
