[package]
name = "scantix-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# QR Code generation
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Redis for rate limiting
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# HMAC for ticket signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# SSE
futures = "0.3"

# HTTP client (for Razorpay API calls)
reqwest = { version = "0.12", features = ["json"] }

# Email sending
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-rustls-tls", "rustls-tls"] }
